--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nodemon": "^3.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
